--- a/train.yaml
+++ b/train.yaml
@@ -33,10 +33,10 @@ features_to_use:
 - sequence_entropy
 learning_rate: 0.003
 num_epoch: 30
-out_dir: ../p2d_results_selfie/cv_tune/cross_val_fold_0_05122022_0/
-pocket_dir: ../osf_data/pocket-data/
-pop_dir: ../osf_data/protein-data/
-profile_dir: ../osf_data/protein-data/
+out_dir: /data/outputs/
+pocket_dir: ../Users/ryancorkill/Downloads/pocket-data/
+pop_dir: ../Users/ryancorkill/Downloads/protein-data-part1/
+profile_dir: ../Users/ryancorkill/Downloads/protein-data-part1/
 seed: 666
 smiles_dir: ./data/pocket-smiles.yaml
 test_split: 0.05
